Implement dislink integration

--- a/build.gradle
+++ b/build.gradle
@@ -26,13 +26,16 @@ repositories {
         url = "https://oss.sonatype.org/content/groups/public/"
     }
     maven {
-        name = "command-api"
-        url = "https://repo.codemc.org/repository/maven-public/"
+        name = "vault"
+        url = "https://nexus.hc.to/content/repositories/pub_releases/"
     }
 }
 
 dependencies {
     compileOnly "org.spigotmc:spigot-api:${project.properties.spigot_distribution}"
+    compileOnly "net.milkbowl.vault:VaultAPI:1.6"
+
+    compileOnly fileTree(dir: "libs")
 }
 
 def targetJavaVersion = 17
@@ -44,15 +47,6 @@ java {
     if (JavaVersion.current() < javaVersion) {
         toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
     }
-}
-
-shadowJar {
-    dependencies {
-        exclude(dependency('com.mojang:brigadier'))
-    }
-
-    // Shade in command api and avoid conflicts :)
-    relocate 'dev.jorel.commandapi', 'me.squeeglii.plugin.dislink.commandapi'
 }
 
 processResources {
