Fixed up the property expansion

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 
 # General Project Properties
 id=chatformatter
+description=VaultChatFormatter formats chat. VaultChatFormatter-Dislink adds dislink integration.
 plugin_version=1.2.0
 maven_group=me.lucko.chatformatter
 
