Fix missing prefixes causing substitution to be ignored completely.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 
 # General Project Properties
-id=chatformatter
+id=VaultChatFormatter-Dislink
 description=VaultChatFormatter formats chat. VaultChatFormatter-Dislink adds dislink integration.
-plugin_version=1.2.0
+plugin_version=1.2.3
 maven_group=me.lucko.chatformatter
 
 # API Configuration - this can probably be tuned back down to 1.13,
